<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddBookFragment">

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:indeterminate="true" />

    <ScrollView
        android:id="@+id/content_group"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progress"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/cover"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/margin_horizontal"
                android:layout_marginTop="@dimen/margin_vertical"
                android:layout_marginEnd="@dimen/margin_horizontal"
                android:contentDescription="@string/desc_cover"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars"/>

            <Button
                style="?attr/materialIconButtonFilledTonalStyle"
                android:id="@+id/prev_picture"
                app:icon="@drawable/ic_arrow_left"
                android:contentDescription="@string/btn_prev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_horizontal_small"
                app:layout_constraintBottom_toBottomOf="@+id/cover"
                app:layout_constraintStart_toStartOf="@+id/cover"
                app:layout_constraintTop_toTopOf="@+id/cover" />

            <Button
                style="?attr/materialIconButtonFilledTonalStyle"
                android:id="@+id/next_picture"
                app:icon="@drawable/ic_arrow_right"
                android:contentDescription="@string/btn_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_horizontal_small"
                app:layout_constraintBottom_toBottomOf="@+id/cover"
                app:layout_constraintEnd_toEndOf="@+id/cover"
                app:layout_constraintTop_toTopOf="@+id/cover" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/title_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_horizontal"
                android:layout_marginTop="@dimen/margin_vertical_small"
                android:layout_marginEnd="@dimen/margin_horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cover">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/title"
                    android:maxLines="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_title" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/authors_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_horizontal"
                android:layout_marginTop="@dimen/margin_vertical_small"
                android:layout_marginEnd="@dimen/margin_horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/authors"
                    android:maxLines="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_authors" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/desc_layout"
                android:layout_width="0dp"
                android:layout_height="128dp"
                android:layout_marginStart="@dimen/margin_horizontal"
                android:layout_marginEnd="@dimen/margin_horizontal"
                android:layout_marginTop="@dimen/margin_vertical_small"
                android:layout_marginBottom="@dimen/margin_vertical_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/authors_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/desc"
                    android:gravity="start"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/hint_summary" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_horizontal"
                android:layout_marginEnd="@dimen/margin_horizontal"
                android:layout_marginTop="@dimen/margin_vertical_small"
                android:layout_marginBottom="@dimen/margin_vertical"
                android:text="@string/btn_save"
                app:layout_constraintTop_toBottomOf="@id/desc_layout"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/error_group"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="icon_error, error_text, btn_retry"/>

    <ImageView
        android:id="@+id/icon_error"
        android:layout_width="@dimen/image_notification"
        android:layout_height="@dimen/image_notification"
        android:contentDescription="@string/error_loading_data"
        app:layout_constraintBottom_toTopOf="@+id/error_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progress"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/ic_error" />

    <TextView
        android:id="@+id/error_text"
        style="?attr/textAppearanceHeadline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_vertical"
        android:text="@string/error_loading_data"
        app:layout_constraintBottom_toTopOf="@+id/btn_retry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon_error" />

    <Button
        android:id="@+id/btn_retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_vertical"
        android:text="@string/btn_retry"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/error_text" />

</androidx.constraintlayout.widget.ConstraintLayout>